Fix issue with header not respecting padding for content that requires a scrollbar

--- a/demo/src/App.module.css
+++ b/demo/src/App.module.css
@@ -8,7 +8,7 @@
 .containerHeader {
   align-items: center;
   padding: var(--padding-medium);
-  height: 80px;
+  flex: 0 0 75px;
 }
 
 .containerLogo {
